fixed visibility problem with datepicker, changed user permission check for timeframes, fixed bug in booking-single template

--- a/assets/public/css/themes/twentytwenty.css
+++ b/assets/public/css/themes/twentytwenty.css
@@ -1,1 +1,15 @@
-.cb-wrapper h1,.cb-wrapper h2,.cb-wrapper h3,.cb-wrapper h4{margin:0 !important}.litepicker .container__days .day-item{font-size:2.2rem}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/workspace\/cb\/commonsbooking\/assets\/public\/sass\/themes\/twentytwenty\.scss}line{font-family:\000031}}
+.cb-wrapper {
+  /* Twenty Twenty Theme*/
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/workspace\/cb\/commonsbooking\/assets\/public\/sass\/themes\/twentytwenty\.scss}line{font-family:\000033}}
+.cb-wrapper h1, .cb-wrapper h2, .cb-wrapper h3, .cb-wrapper h4 {
+  margin: 0 !important;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/workspace\/cb\/commonsbooking\/assets\/public\/sass\/themes\/twentytwenty\.scss}line{font-family:\0000311}}
+.litepicker .container__days .day-item {
+  font-size: 2.2rem;
+}
+
+/*# sourceMappingURL=twentytwenty.css.map */
