--- a/assets/public/sass/partials/_bookings.scss
+++ b/assets/public/sass/partials/_bookings.scss
@@ -1,4 +1,5 @@
 #ui-datepicker-div {
+    display: none;
     background-color: white;
     padding: 1.5rem;
     border-radius: 8px;
